# aws-account-inventory

./: .gitignore  README.md  accounts.json  organizations.py  ou_structure.json  pyproject.toml
