[tool.poetry]
name = "aws-account-inventory"
version = "0.1.0"
description = "Python Script to gather information on every account within an AWS Organization including details on the Root, Organizational Units, Sub OU's, and the accounts that exist within them."
authors = ["Christopher Scogin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.29.5"
boto3-stubs = "^1.29.5"
mypy-boto3-organizations = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
